objects/CSS_Parts_Options__c.object
<CustomObject>
    <description>To store Parts and Options. Created Record type</description>
    <fields>
        <fullName>Account_Code__c</fullName>
        <label>Account Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Local_Currency__c</fullName>
        <description>To store amount in local currency as per story# GSSC-138</description>
        <label>Amount Local Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assignment__c</fullName>
        <label>Assignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Replaced</fullName>
                </value>
                <value>
                    <fullName>Repaired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMS_Quantity__c</fullName>
        <label>BMS Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_Claims__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSS Claims</label>
        <referenceTo>CSS_Claims__c</referenceTo>
        <relationshipLabel>CSS Parts Options</relationshipLabel>
        <relationshipName>CSS_Parts_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSS_Classic_SJId__c</fullName>
        <formula>IF (Service_Job__c != null,Service_Job__c,
IF ( Solutions__r.FaultCode__r.Job_Order__c !=null,Solutions__r.FaultCode__r.Job_Order__c, Solutions__r.Symptom__r.Job_Order__c ))</formula>
        <label>Classic Service Job</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Date__c</fullName>
        <label>Change Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_User__c</fullName>
        <label>Change User</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Type__c</fullName>
        <formula>TEXT(FailurepartId__r.Claim_Type__c)</formula>
        <label>Claim Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claimtype__c</fullName>
        <label>Claim type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoverageLimitExceedMsg_Status__c</fullName>
        <label>CoverageLimitExceedMsg_Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoverageLimitExceedMsg__c</fullName>
        <label>CoverageLimitExceedMsg</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Covered__c</fullName>
        <label>% Covered</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Create_Date__c</fullName>
        <label>Create Date</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_User__c</fullName>
        <label>Create User</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Css_Estimate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Story# 98036</description>
        <label>Estimate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency_Type__c</fullName>
        <description>To store logged in user&apos;s currency type as per story# GSSC-138</description>
        <label>Currency Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <label>Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Part_Quantity__c</fullName>
        <description>This Field is used to store the default quantity value from parts webservice and to reuse it even if user has changed quantity</description>
        <label>Default Part Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_Version__c</fullName>
        <description>To store the Exchange rate version of part created date as per story# GSSC-138</description>
        <label>Exchange Rate Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <description>To store the Exchange rate of part created date as per story# GSSC-138</description>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>13</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpenseTotal__c</fullName>
        <label>ExpenseTotal</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fail_Code__c</fullName>
        <label>Fail Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FailureName__c</fullName>
        <label>FailureName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FailurepartId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FailurepartId</label>
        <referenceTo>CSS_Solution_Component__c</referenceTo>
        <relationshipLabel>CSS Parts Options</relationshipLabel>
        <relationshipName>CSS_Parts_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Get_Fail_Code_Formula__c</fullName>
        <formula>IF(Fail_Code__c !=null&amp;&amp;Fail_Code__c!=&apos;&apos;,Fail_Code__c,FailurepartId__r.FailCode_Formula__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Get Fail Code Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>6000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HoursTravelled__c</fullName>
        <label>HoursTravelled</label>
        <precision>16</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Info_Only_Claim__c</fullName>
        <defaultValue>false</defaultValue>
        <description>story #155919</description>
        <label>Info_Only_Claim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Custom_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Custom Part?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_BMS__c</fullName>
        <label>Item_BMS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select One</fullName>
                    <default>true</default>
                    <label>Select One</label>
                </value>
                <value>
                    <fullName>AIR CONDITIONING ORINGS</fullName>
                </value>
                <value>
                    <fullName>AIR DRYER</fullName>
                </value>
                <value>
                    <fullName>AIR FILTER</fullName>
                </value>
                <value>
                    <fullName>ANTIFREEZE/COOLANT</fullName>
                </value>
                <value>
                    <fullName>ASSEMBLY LUBE</fullName>
                </value>
                <value>
                    <fullName>BELT</fullName>
                </value>
                <value>
                    <fullName>CAMPAIGN SUPPLIES</fullName>
                </value>
                <value>
                    <fullName>CLAMP</fullName>
                </value>
                <value>
                    <fullName>COMMERCIAL TRAVEL</fullName>
                </value>
                <value>
                    <fullName>CONTRACTED SERVICES</fullName>
                </value>
                <value>
                    <fullName>COOLANT FILTER</fullName>
                </value>
                <value>
                    <fullName>CRANKCASE BRTHR ELEMENT</fullName>
                </value>
                <value>
                    <fullName>DCA</fullName>
                </value>
                <value>
                    <fullName>DEF</fullName>
                </value>
                <value>
                    <fullName>DEF FILTER</fullName>
                </value>
                <value>
                    <fullName>DRIVELINE STRAP KIT</fullName>
                </value>
                <value>
                    <fullName>EXHAUST MOUNTING STRAP</fullName>
                </value>
                <value>
                    <fullName>FUEL FILTER</fullName>
                </value>
                <value>
                    <fullName>HANDLING ALLOWANCE</fullName>
                </value>
                <value>
                    <fullName>HARDWARE/FASTENERS</fullName>
                </value>
                <value>
                    <fullName>HOSE</fullName>
                </value>
                <value>
                    <fullName>IMPORT CHARGES</fullName>
                </value>
                <value>
                    <fullName>OEM GASKET</fullName>
                </value>
                <value>
                    <fullName>OIL</fullName>
                </value>
                <value>
                    <fullName>OIL FILTER</fullName>
                </value>
                <value>
                    <fullName>PAINT</fullName>
                </value>
                <value>
                    <fullName>RADIATOR FLUSH</fullName>
                </value>
                <value>
                    <fullName>REPLACEMENT ENGINE</fullName>
                </value>
                <value>
                    <fullName>SEALANT/ADHESIVE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <label>Line Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <label>Mileage</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Misc_LOV__c</fullName>
        <label>Misc LOV</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ODM_Status_Code__c</fullName>
        <label>ODM_Status_Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ODM_Status_Message__c</fullName>
        <label>ODM Status Message</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ODM_Status__c</fullName>
        <label>ODM Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YTBV</fullName>
                    <default>true</default>
                    <label>YTBV</label>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>WARN</fullName>
                </value>
                <value>
                    <fullName>PASSED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <label>OEM</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_ESN__c</fullName>
        <label>Option ESN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Number__c</fullName>
        <label>Option Number</label>
        <length>6000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Option__c</fullName>
        <label>Option</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartOC__c</fullName>
        <label>PartOC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Assignment__c</fullName>
        <description>This Field is used to store the webservice response on what type of part it is(Eg: primkary,OEM etc)</description>
        <label>Part_Assignment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Description__c</fullName>
        <label>Part Description</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Part_Name__c</fullName>
        <label>Part Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts_Return__c</fullName>
        <label>Parts Return</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts_Type__c</fullName>
        <label>Parts Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Item__c</fullName>
        <label>Previous Item</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <label>Price Book</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Ordered__c</fullName>
        <label>Quantity Ordered</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Used__c</fullName>
        <label>Quantity Used</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RID__c</fullName>
        <label>RID</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repair_Group__c</fullName>
        <label>Repair Group</label>
        <length>6000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Replacement_Reason__c</fullName>
        <label>Replacement Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select One</fullName>
                    <default>true</default>
                    <label>Select One</label>
                </value>
                <value>
                    <fullName>Campaign-TRP-ATC</fullName>
                </value>
                <value>
                    <fullName>Damaged Upon Removal</fullName>
                </value>
                <value>
                    <fullName>Progressive Damage</fullName>
                </value>
                <value>
                    <fullName>Root Cause</fullName>
                </value>
                <value>
                    <fullName>Service Publication</fullName>
                </value>
                <value>
                    <fullName>Refer to Narrative</fullName>
                </value>
                <value>
                    <fullName>GSQ Part</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReturnToFactory__c</fullName>
        <label>ReturnToFactory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnWaiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ReturnWaiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Return_Instructions__c</fullName>
        <description>Field to store Return Instructions from getPartsReturn(EPR) service</description>
        <label>Return Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sell_Price__c</fullName>
        <label>Sell Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serial_Number_Vendor__c</fullName>
        <label>Serial Number Vendor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Job</label>
        <referenceTo>CSS_Job_Order__c</referenceTo>
        <relationshipLabel>CSS Parts Options</relationshipLabel>
        <relationshipName>CSS_Parts_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>CSS Parts Options</relationshipLabel>
        <relationshipName>CSS_Parts_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_partnumber__c</fullName>
        <label>Service partnumber</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Siebel_Claim_Number__c</fullName>
        <label>Siebel Claim Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Value__c</fullName>
        <label>Siebel Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solutions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSS Solutions</label>
        <referenceTo>CSS_Solutions__c</referenceTo>
        <relationshipLabel>CSS Parts Options</relationshipLabel>
        <relationshipName>CSS_Parts_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TTMLWrapperID__c</fullName>
        <label>TTMLWrapperID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <label>Technician</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_BMS__c</fullName>
        <label>Type_BMS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select One</fullName>
                    <default>true</default>
                    <label>Select One</label>
                </value>
                <value>
                    <fullName>Lodging</fullName>
                </value>
                <value>
                    <fullName>Meals</fullName>
                </value>
                <value>
                    <fullName>Non Commercial-Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Parts_Option__c</fullName>
        <externalId>true</externalId>
        <label>Unique Parts Option Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Price_Local_Currency__c</fullName>
        <description>To store Unit Price in local currency as per story# GSSC-138</description>
        <label>Unit Price Local Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Allocation__c</fullName>
        <label>Warranty Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isManual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isManual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>part_size__c</fullName>
        <label>Part size</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>CSS Parts Options</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>OBJECT_ID</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CSS_Parts_Options__c.Options,CSS_Parts_Options__c.Parts</value>
        </filters>
        <filters>
            <field>Service_Order__c</field>
            <operation>equals</operation>
            <value>00354057</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Service_Order__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CSS_Parts_Options__c.Options</value>
        </filters>
        <filters>
            <field>Service_Order__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>CSS Parts Options Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS Parts Options</pluralLabel>
    <recordTypes>
        <fullName>BMS_Parts</fullName>
        <active>true</active>
        <description>will be used for the parts sent by the BMS</description>
        <label>BMS Parts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Options</fullName>
        <active>true</active>
        <description>Store Options</description>
        <label>Options</label>
    </recordTypes>
    <recordTypes>
        <fullName>OtherClaimables</fullName>
        <active>true</active>
        <label>OtherClaimables</label>
    </recordTypes>
    <recordTypes>
        <fullName>Parts</fullName>
        <active>true</active>
        <description>To store Parts</description>
        <label>Parts</label>
    </recordTypes>
    <recordTypes>
        <fullName>TTML</fullName>
        <active>true</active>
        <description>To identify Travel, Towing, Meals and Lodging related Parts</description>
        <label>TTML</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CSS_Parts_Name_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Name)  &amp;&amp;  NOT(ISNEW())</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>CSS Parts Options Name Can&apos;t be Edited</errorMessage>
    </validationRules>
</CustomObject>